# autotest_mobile

./: .gitignore  README.md  config.empty.json  config.test.json  notifications.json  pyproject.toml
docker/: docker-compose.yml  start.sh
docker/allure-report/: Dockerfile
docker/python/: Dockerfile
model/page/: search.py  setting.py  wait.py
model/page/main/: bottomMenu.py  main.py
model/page/welcome/: screen.py
tests/: conftest.py  test_search.py  test_setting.py  test_some.py  test_wellcome.py
utils/: allure_attach.py  authorization.py  base_session.py  driver.py  file.py  settings.py
utils/setting/: browserstack.py  emulator.py  real.py
wikipedia/model/page/: search.py
wikipedia/model/page/main/: bottom_menu.py  main.py
wikipedia/utils/: allure_attach.py  driver.py  file.py  settings.py
wikipedia/utils/setting/: browserstack.py  emulator.py  real.py
